Fix background on iOS

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -3,7 +3,7 @@ body {
   background-image:
     url("/img/Chaos-Kollektiv-Logo.svg"),
     linear-gradient(#a98ef1, #7858ce);
-  background-size: 100px;
+  background-size: 100px, 100%;
   background-position: center;
   margin: 0;
   overflow: hidden;
